--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite-ssg build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -13,6 +13,9 @@
     "vue": "^3.4.21"
   },
   "devDependencies": {
-    "vite": "^5.0.0"
+    "@unhead/vue": "^2.0.10",
+    "vite": "^5.0.0",
+    "vite-ssg": "^27.0.1",
+    "vue-router": "^4.5.1"
   }
 }
