--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite-ssg build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@vitejs/plugin-vue": "^5.2.4",
@@ -16,6 +17,10 @@
     "@unhead/vue": "^2.0.10",
     "vite": "^5.0.0",
     "vite-ssg": "^27.0.1",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "@vue/test-utils": "^2.4.1",
+    "vitest": "^1.2.2",
+    "jsdom": "^22.1.0",
+    "@jest/globals": "^29.7.0"
   }
 }
